--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,15 @@
 .App-logo {
   float: left;
   position: relative;
-  animation: App-logo-spin infinite 2s linear;
-  height: 80px;
+  animation: App-logo-spin infinite 5s cubic-bezier(1,-0.09,.44,.93);
+  height: 4.5rem;
 }
 div.nav {
-  background-color: rgb(1, 1, 17);
-  height: 100px;
+  background: repeating-linear-gradient(#111114, #00ffc9);
+  height: 7rem;
 }
-.nav ul li { 
+.nav ul li {
+  color: white;
   display:  inline-flex;
   text-align: center;
   list-style: none;
@@ -20,11 +21,17 @@ div.nav {
   margin: 5px;
 
 }
+
+li:hover {
+  background: rgba(120,120,120, 0.3);
+  border-radius: 2rem;
+
+}
 .App-header {
-  background-color: rgb(68, 67, 67);
-  height: 150px;
-  padding: 25px;
-  color: white;
+  background:#ddd;
+  height: 50vw;
+  color: black;
+  border-radius: 51rem 0rem 51rem 0rem;
 }
 
 .App-title {
@@ -36,7 +43,7 @@ div.nav {
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from { transform: rotateY(0deg); }
+  to { transform: rotateY(360deg); }
   
 }
