--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background: gray;
-}
+ }
+ #root {
+ 	height: 100vh;
+ 	width: 100%;
+  	border-radius: 0px 20rem;
+ }
