--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 div.nav {
   background: repeating-linear-gradient(#111114, #00ffc9);
   height: 7rem;
+  border: 1px salmon;
 }
 .nav li,a {
   color: white;
@@ -24,14 +25,18 @@ div.nav {
 }
 ul {
   position: absolute;
-  margin: 2rem 9rem;
+  width: 100%;
+  margin: 1.6rem 0rem;
 }
 li:hover {
   background: rgba(17, 255, 238, 0.47);
   border-radius: 30% 1px;
 }
+.active {
+  background: rgba(128, 1, 167, 0.479);
+}
 .App-header {
-  background:#ddd;
+  background:rgba(156, 255, 230, 0.931);
   height: 25vw;
   color: black;
   border-radius: 1rem 0rem ;
