--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   padding: 0;
  }
  #root {
- 	height: 100vh;
+	height: 100vh;
  	width: 100%;
-  	background: #edcce9;;
+  background: #edcce9;
  }
