--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,37 +1,42 @@
 .nav {
-    background: repeating-linear-gradient(#111114, #00ffc9);
-    height: 7rem;
-    border: 1px salmon;
-    
+    background: repeating-linear-gradient( #031229,rgba(248, 47, 47, 0.431), transparent );
+    position: sticky;
+    top:1px;
+    width: 100%;
+    height: 7pc;
+    max-width: 0 2rem;
   }
-  .nav li,a {
-    color: white;
+  .nav li {
     display:  inline-flex;
     text-align: center;
-    text-decoration: none; 
     list-style: none;
-    padding: 5px;
-    margin: 5px;
-  
-  }
-  
-  ul {
-    position: absolute;
-    width: 100%;
-    margin: 1.6rem 0rem;
+    
     
   }
-
-li:hover {
-    background: rgba(17, 255, 238, 0.47);
-    border-radius: 2rem 1rem;
+  .nav li a {
+    color: rgb(204, 250, 251);
+    text-decoration: none; 
+    outline: 0;
+    margin: 15px;
+    font-family: 'Diplomata', cursive;
+    
   }
-
-.sticky{
-    position: fixed;
-    height: 5rem;
-    width: 100%;
-    background: rgba(61, 8, 8, 0.678);
-    border-bottom: 10px rgb(94, 14, 6);
-    z-index: 20;
+  
+  .nav ul {
+    position: absolute;
+    top: 25%;
+    width: 100%;    
   }
+ .nav a:hover { 
+    background: rgba(170, 223, 223, 0.47);
+    border-radius: 0.1rem;
+
+  } 
+.nav a:hover {
+  color: rgb(98, 250, 143);  
+}
+.nav li a:focus {
+  background: linear-gradient(rgba(0, 0, 0, 0.246), transparent);
+ height: 4rem;
+  border-radius: 5%;
+}
