--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,10 +1,12 @@
+
 .nav {
-    background: repeating-linear-gradient( #031229,rgba(248, 47, 47, 0.431), transparent );
-    position: sticky;
+    background: repeating-linear-gradient( #00173aea, transparent );
+    position: relative;
     top:1px;
     width: 100%;
-    height: 7pc;
+    height: 6pc;
     max-width: 0 2rem;
+    top: 0;
   }
   .nav li {
     display:  inline-flex;
@@ -23,7 +25,7 @@
   }
   
   .nav ul {
-    position: absolute;
+    position: relative;
     top: 25%;
     width: 100%;    
   }
@@ -32,11 +34,16 @@
     border-radius: 0.1rem;
 
   } 
-.nav a:hover {
+.nav li:hover {
   color: rgb(98, 250, 143);  
 }
 .nav li a:focus {
   background: linear-gradient(rgba(0, 0, 0, 0.246), transparent);
  height: 4rem;
   border-radius: 5%;
+}
+.sticky {
+  position: fixed;
+  background: rgba(22, 5, 39, 0.753);
+  box-shadow: ( 0, 1, 1, #00173aea);
 }
