--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,49 +1,42 @@
 
-.nav {
-    background: repeating-linear-gradient( #00173aea, transparent );
-    position: relative;
-    top:1px;
-    width: 100%;
-    height: 6pc;
-    max-width: 0 2rem;
-    top: 0;
-  }
-  .nav li {
-    display:  inline-flex;
-    text-align: center;
-    list-style: none;
-    
-    
-  }
-  .nav li a {
-    color: rgb(204, 250, 251);
-    text-decoration: none; 
-    outline: 0;
-    margin: 15px;
-    font-family: 'Diplomata', cursive;
-    
-  }
-  
-  .nav ul {
-    position: relative;
-    top: 25%;
-    width: 100%;    
-  }
- .nav a:hover { 
-    background: rgba(170, 223, 223, 0.47);
-    border-radius: 0.1rem;
+nav {
+  display: flex;
+  flex-direction: row;
 
-  } 
-.nav li:hover {
-  color: rgb(98, 250, 143);  
+  background: repeat,linear-gradient(transparent, #232c45 );
+  width: 100%;
+  height: auto;
+  position: relative;
+  overflow: hidden;
 }
-.nav li a:focus {
-  background: linear-gradient(rgba(0, 0, 0, 0.246), transparent);
- height: 4rem;
+a{
+  text-decoration: none; 
+  outline: 0;
+}
+
+a h4 {
+  display: block;
+  float: left;
+  color: rgb(204, 250, 251);  
+  margin: 15px;
+  padding: 15px;
+  font-family: 'Diplomata', cursive; 
+}
+
+nav a h4:hover { 
+  background: rgba(58, 65, 65, 0.47);
+  border-radius: 0.1rem;
+  color: rgb(98, 250, 143);  
+} 
+
+nav a h4:focus {
+  background: linear-gradient(rgba(236, 34, 7, 0.35), transparent);
+  height: 4rem;
   border-radius: 5%;
 }
 .sticky {
+  top: 0;
   position: fixed;
-  background: rgba(22, 5, 39, 0.753);
-  box-shadow: ( 0, 1, 1, #00173aea);
+  background: rgba(4, 13, 31, 1);
 }
+
