--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
  }
 
  html {
@@ -11,3 +12,59 @@
  	width: 100%;
   background:none;
  }
+/*page is devided to 12 coloums so as to help place elements*/
+  
+/*stayling all the coloums*/ 
+[class*= "col-"]{
+  padding: 15px;
+  float: left;
+  border: solid 1px rgb(2, 14, 24);
+}
+
+/*styling rows*/
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+ /* mobile phones first*/
+ [class*= "col-"] {
+  width: 100%;
+}
+
+@media only screen and (max-width: 600px){
+   /* For tablets: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
+@media only screen and (max-width: 768px){
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+@media only screen and (max-width: 600px){
+  div.nav, .sticky {
+    display: none;
+  }
+}
