--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,8 @@
   background-size: 100%;
   bottom: 0px; 
   height: 150vh;
+  display: flex;
+  flex-wrap: wrap;
 }
 .footer {
   display: block;
