--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,42 @@
 .App {
   text-align: center;
-  font-family: 'Petit Formal Script', cursive;
-  
+  font-family: 'Petit Formal Script', cursive;  
   font-family: 'Bai Jamjuree', sans-serif;
 }
-
 
 .active{
   background: rgba(128, 1, 167, 0.479);
  
 }
-/*  */
-
+/*Header  */
 .App-header {
-  background: no-repeat  url('./components/nef.jpg');
-  background-size: 100%; 
-  height: 34pc;
-  color: black;
+  background: url('./components/nef.jpg');
+  background-size: cover;
+  height: 40rem;
+  width: 100%;
+ 
+  
+}
+.App-header p {
+  position: relative;
+  top: 85%;
+  padding: 10px;
+  font-size: large;
+  background: #ccd8fa70;
+  border-radius: 1rem;
 }
 
-.App-title {
-  font-size: 1.5em;
+.App-title  {
+  color: rgb(148, 98, 97);
+  font-size: 2.5rem;
+  position: relative;
+  top: 71%;
+  left: -1;
+  opacity: 0.3;
+}
+.App-title:hover{ 
+  opacity: 1;
+  color: rgb(199, 226, 45);
 }
 .App-logo {
   float: left;
@@ -35,8 +51,8 @@
   
 }
 .main {
-  background: no-repeat  url('./components/massawa.jpg');
-  background-size: 100%;
+  background: repeat,linear-gradient(transparent, #232c45 );
+  width: 100%;
   bottom: 0px; 
   height: 150vh;
   display: flex;
@@ -45,7 +61,7 @@
 .footer {
   display: block;
   height: 25pc;
-  background: linear-gradient(black, grey);
+  background: linear-gradient(grey,black );
 }
 #map{
   height: 200px;
