--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,13 +1,9 @@
-
 nav {
-  display: flex;
-  flex-direction: row;
-
-  background: repeat,linear-gradient(transparent, #232c45 );
-  width: 100%;
+  position: absolute;
+  top: 78%;
   height: auto;
-  position: relative;
-  overflow: hidden;
+  width: 100%;
+  
 }
 a{
   text-decoration: none; 
@@ -15,16 +11,16 @@ a{
 }
 
 a h4 {
-  display: block;
-  float: left;
+  display: inline-block;
+  text-align: center;
   color: rgb(204, 250, 251);  
   margin: 15px;
   padding: 15px;
-  font-family: 'Diplomata', cursive; 
+  font-family: Diplomata, cursive; 
 }
 
 nav a h4:hover { 
-  background: rgba(58, 65, 65, 0.47);
+  background: rgba(171, 192, 192, 0.47);
   border-radius: 0.1rem;
   color: rgb(98, 250, 143);  
 } 
@@ -37,6 +33,6 @@ nav a h4:focus {
 .sticky {
   top: 0;
   position: fixed;
-  background: rgb(105, 6, 72);
+  background: rgba(1, 2, 15, 0.589);
 }
 
