--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,16 @@
 
  html {
   scroll-behavior: smooth;
+  width: 100vmax;
 }
  #root {
 	height: 100vh;
  	width: 100%;
   background:none;
  }
-
+img, video, canvas {
+  max-width: 100%;
+}
  /* mobile phones first*/
 @media only screen and (min-width: 100px) and (max-width: 400px) {
   /* [class*= "col-"] {  width: 100%;} */
