--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   position: relative;
   background: url('./components/nef.jpg') 50% 50% no-repeat;
   background-size: cover;
-  height: 40rem;
+  height: 100vh;
   width: 100%;
  
   
