--- a/src/index.css
+++ b/src/index.css
@@ -18,20 +18,31 @@ img, video, canvas {
 }
  /* mobile phones first*/
 @media only screen and (min-width: 100px) and (max-width: 400px) {
-  /* [class*= "col-"] {  width: 100%;} */
-  body { 
+    body { 
     background: gold;
+  }
+  .option {
+    display: block;
+    
   }
   .App-header p,.App-title {
     position: relative;
     top: 18%;
   }
-
 }
 
+@media only screen and (max-width: 400px){
+  .option {
+    display: block;
+    
+  }
+}
+ /* For tablets: */
 @media only screen and (min-width: 401px) and (max-width: 960px){
-   /* For tablets: */
   
+   .option {
+    display: block;
+  }
   body {
     background: orchid;
   }
@@ -39,13 +50,16 @@ img, video, canvas {
 
 @media only screen and (min-width: 961px){
   /* For desktop: */
-
+  .option {
+    display: none;
+  }
   body {
     background: rgb(112, 149, 218);
   }
 }
-@media only screen and (max-width: 400px){
-  div.nav, .sticky {
+
+@media only screen and (max-width: 960px){
+  nav {
     display: none;
   }
 }
