--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   position: relative;
   animation: App-logo-spin infinite 10s cubic-bezier(1,-0.09,.44,.93);
   height: 4.5rem;
-  margin: 15px;
+  padding: 5px;
 }
 @keyframes App-logo-spin {
   from { transform: rotateY(0deg); }
@@ -55,9 +55,10 @@
 .main {
   background: repeat,linear-gradient(transparent, #232c45 );
   width: 100%;
-  height: 150vh;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
+  ;
 }
 /* style to target the route rendered elements*/
 .home,
@@ -65,13 +66,13 @@
 .contact,
 .timeline,
 .projects {
-  position: absolute;
-  padding: 1%;
-  height: 200px;
-  background: rebeccapurple;
-  z-index: -1;
+  position: relative;
+  padding: 10%;
+  height: auto;
   width: 100%;
-  padding: 3%;
+  background: rgb(0, 107, 88);
+  width: 100%;
+ 
 }
 .footer {
   display: block;
