--- a/src/components/option.css
+++ b/src/components/option.css
@@ -4,7 +4,7 @@
     top: 1%;
 }
 
-.option a {
+.option  a {
     display: block;
     padding: 5%;
     margin: 2%;
@@ -32,4 +32,7 @@
   }
   .option nav img:hover {
     background:red;
+}
+.list{
+    display: block;
 }
