--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,9 @@ img, video, canvas {
   }
   .option {
     display: block;
-    
+  }
+  .nav-bar {
+    height: 12vh;
   }
   .App-header p,.App-title {
     position: relative;
@@ -51,16 +53,17 @@ img, video, canvas {
 
 @media only screen and (min-width: 961px){
   /* For desktop: */
-  .option {
+  /* .option {
     display: none;
-  }
+  } */
+
   body {
     background: rgb(112, 149, 218);
   }
 }
 
 @media only screen and (max-width: 960px){
-  nav {
-    display: none;
+  nav .list a:not(:first-child) {
+    display: block;
   }
 }
