--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,9 @@
   position: relative;
   width: auto;
   border-radius: 1rem;
+  -webkit-box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
+  -moz-box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
+  box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
 }
 div.projects{
 
