--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -48,6 +48,9 @@ nav a:not(:first-child):hover {
   height: 10vh;
   width: 100%;
   padding: 1%;
+  -webkit-box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
+  -moz-box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
+  box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
 }
 .sticky a:not(:first-child):hover { 
   background: rgba(171, 192, 192, 0.47);
