--- a/src/components/option.css
+++ b/src/components/option.css
@@ -3,7 +3,6 @@
     right: 1%;
     top: 1%;
 }
-
 .option  a {
     display: block;
     padding: 7%;
@@ -15,7 +14,7 @@
     display: block;
     width: 14rem;
     height: auto;
-    background: rgba(26, 2, 2, 0.4);
+    background:rgba(13, 68, 62, 0.4);
     z-index: 1;
     border-radius: 2rem 1rem;
 }
@@ -35,6 +34,8 @@
     display: block;
     position: relative;
     text-align: left;
-    border-radius: 3% 10rem;
+    box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
+    border-radius: 0rem 50rem 0rem 0rem;
+    background: #303e5866;
    
 }
