--- a/src/App.css
+++ b/src/App.css
@@ -69,40 +69,47 @@
   flex-wrap: nowrap;
 }
 /* style to target the route rendered elements*/
-.home,
-.about,
-.contact,
-.timeline,
-.projects { 
-  padding: 4%;
+div.home,
+div.about,
+div.contact,
+div.timeline,
+div.projects { 
+  padding: 7% 2%;
   text-align: left;
   width: 100%;
   height: auto;
 }
 /*Image style*/
 .masawino {
+  float: left;
+  padding: 2px;
+  margin: 2%;
   position: relative;
   width: auto;
-  border-radius: 1rem;
+  border-radius: 2rem;
   -webkit-box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
   -moz-box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
   box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
 }
 div.projects{
-
+ 
+}
+.menu{
+  height: 100vh;
 }
 .footer {
+  text-align: center;
   display: block;
   height: 10pc;
   background: linear-gradient(grey,black );
-  width: 100vw;
+  width:100%;
 }
 
 /***Responsive design***/
  /* mobile phones first*/
-@media only screen and (min-width: 100px) and (max-width: 400px) {
+@media only screen and (min-width: 10px) and (max-width: 400px) {
    body { 
-    background: gold;
+    background: rgba(177, 102, 102, 0.48);
   }
   .option {
     display: block;
@@ -126,7 +133,7 @@ div.projects{
   .App-header,
   .main,
   .footer {
-    grid: auto-flow dense / 30%;
+    grid: auto-flow dense / 100%;
     grid-gap: none;
   }
   .masawino {
@@ -140,8 +147,7 @@ div.projects{
     display: block;
   }
   body {
-    background: orchid;
-    width: 100vw;
+    background: rgb(134, 106, 106);
   }
   .masawino {
     width:100%;
