--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,7 +1,7 @@
 .nav-bar {
   position: absolute;
   top: 90%;
-  height:10vh;
+  height: 10vh;
   width: 100%;
   overflow: hidden;
   z-index: 50;
@@ -16,25 +16,25 @@
   width: 100%;
   background: none;
 }
-a:not(:first-child){ 
-  text-decoration: none; 
+a:not(:first-child) {
+  text-decoration: none;
   outline: 0;
   max-width: 100%;
   display: inline;
-  color: rgb(204, 250, 251);  
-  font-family: Diplomata, cursive; 
+  color: rgb(204, 250, 251);
+  font-family: Diplomata, cursive;
   font-size: 15px;
   padding: 1%;
   margin: 1%;
 }
 
-nav a:not(:first-child):hover { 
+nav a:not(:first-child):hover {
   /* background: rgba(171, 192, 192, 0.47); */
   border-radius: 0.2rem;
-  color: rgb(98, 250, 143);  
-} 
+  color: rgb(98, 250, 143);
+}
 
-.list a:not(:first-child):focus{
+.list a:not(:first-child):focus {
   background: linear-gradient(rgba(248, 41, 14, 0.424), transparent);
   height: 4rem;
   border-radius: 5%;
@@ -42,21 +42,21 @@ nav a:not(:first-child):hover {
   outline: 0;
 }
 .sticky {
-  top:0;
+  top: 0;
   position: fixed;
   background: rgba(1, 2, 15, 0.589);
   height: 10vh;
   width: 100%;
   padding: 1%;
-  -webkit-box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
-  -moz-box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
-  box-shadow: 0px 2px 9px 2px rgba(0,0,0,0.85);
+  -webkit-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
+  -moz-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
+  box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.85);
 }
-.sticky a:not(:first-child):hover { 
+.sticky a:not(:first-child):hover {
   background: rgba(171, 192, 192, 0.47);
   border-radius: 0.2rem;
-  color: rgb(98, 250, 143);  
-} 
+  color: rgb(98, 250, 143);
+}
 
 #cross-arrow,
 #list-boat {
