--- a/src/components/option.css
+++ b/src/components/option.css
@@ -1,41 +1,42 @@
-.option nav, img#heart, img#x-arrow {
-    position: absolute;
-    right: 1%;
-    top: 1%;
+.option nav,
+img#heart,
+img#x-arrow {
+  position: absolute;
+  right: 1%;
+  top: 1%;
 }
-.option  a {
-    display: block;
-    padding: 7%;
-    margin: 7%;
-    max-width: 100%;
-}
-
-.option nav{
-    display: block;
-    width: 14rem;
-    height: auto;
-    background:rgba(13, 68, 62, 0.4);
-    z-index: 1;
-    border-radius: 2rem 1rem;
+.option a {
+  display: block;
+  padding: 7%;
+  margin: 7%;
+  max-width: 100%;
 }
 
-.option #heart,.option #x-arrow {
-    display: inline-block;
-    width: 6rem;
-    z-index: 5;
-  }
+.option nav {
+  display: block;
+  width: 14rem;
+  height: auto;
+  background: rgba(13, 68, 62, 0.4);
+  z-index: 1;
+  border-radius: 2rem 1rem;
+}
 
-  .option nav img{
-      display: none;
-  }
-  
+.option #heart,
+.option #x-arrow {
+  display: inline-block;
+  width: 6rem;
+  z-index: 5;
+}
 
-  .option .list{
-    display: block;
-    position: relative;
-    text-align: left;
-    box-shadow: 0px 16px 10px 2px rgba(0,0,0,0.80);
-    border-radius: 0rem 50rem 1rem 1rem;
-    background: #28cbcb33;
-   
+.option nav img {
+  display: none;
+}
+
+.option .list {
+  display: block;
+  position: relative;
+  text-align: left;
+  box-shadow: 0px 16px 10px 2px rgba(0, 0, 0, 0.8);
+  border-radius: 0rem 50rem 1rem 1rem;
+  background: #28cbcb33;
 }
